--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Ofertas com descontos reais nas principais lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliado seguros e atualizados.">
     <meta property="og:title" content="Centro de Compras - Ofertas e Descontos">
     <meta property="og:description" content="Encontre as melhores ofertas em lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliados seguros e atualizados!">
@@ -296,8 +296,10 @@
         </a>
     </div>
     <script>
-        const VERSION = "1.0.8";
-        const appsScriptUrl = 'https://script.google.com/macros/s/AKfycbzlXDRC0qxR4b3ozvpYpdONTgntqxHLHXk_7tcuSL98HNZWgmhMQ_45OitQu_Lla2l0Jg/exec';
+        const VERSION = "1.0.8"; // Mantenha a sua versão original, se quiser
+        // *** IMPORTANTE: SUBSTITUA PELA URL DA SUA API NO RENDER! ***
+        const API_BASE_URL = 'https://SUA_API_RENDER_URL'; // Ex: 'https://minha-api-produtos.onrender.com'
+        
         let currentImages = [];
         let currentImageIndex = 0;
         let currentPage = 1;
@@ -316,7 +318,7 @@
                 clickTimeout = setTimeout(() => { clickCount = 0; }, 500);
             } else if (clickCount === 3) {
                 clearTimeout(clickTimeout);
-                window.location.href = "add-produto.html";
+                window.location.href = "add-produtos.html"; // Correção para o nome do arquivo
                 clickCount = 0;
             }
         });
@@ -337,7 +339,8 @@
             errorMessage.style.display = "none";
 
             try {
-                const url = new URL(appsScriptUrl);
+                // Monta a URL para a sua API Node.js
+                const url = new URL(`${API_BASE_URL}/api/produtos`); // Endpoint da sua API para buscar produtos
                 url.searchParams.append('page', page);
                 url.searchParams.append('limit', productsPerPage);
                 if (categoria !== "todas") url.searchParams.append('categoria', categoria);
@@ -346,14 +349,15 @@
 
                 const response = await fetch(url, { method: 'GET' });
                 if (!response.ok) {
-                    if (response.status === 403) {
-                        throw new Error('Acesso negado: Verifique se a API está configurada como "Qualquer pessoa, mesmo anônima".');
-                    }
-                    throw new Error(`Erro HTTP: ${response.status}`);
+                    // Erros de rede ou HTTP (4xx, 5xx)
+                    throw new Error(`Erro HTTP: ${response.status} - ${response.statusText}`);
                 }
                 const data = await response.json();
 
-                if (data.status !== "success") throw new Error(data.message || 'Erro ao carregar produtos');
+                // Sua API Node.js DEVE retornar { status: "success", data: [...], total: ... }
+                if (data.status !== "success") {
+                    throw new Error(data.message || 'Erro ao carregar produtos do servidor');
+                }
 
                 allProducts = data.data || [];
                 totalProdutos = data.total || 0;
@@ -370,6 +374,7 @@
                         card.classList.add("produto-card", "visible");
                         card.setAttribute("data-categoria", produto.categoria.toLowerCase());
                         card.setAttribute("data-loja", produto.loja.toLowerCase());
+                        // O campo 'imagens' agora espera um array de URLs da sua API
                         const imagens = Array.isArray(produto.imagens) && produto.imagens.length > 0 ? produto.imagens : ["imagens/placeholder.jpg"];
                         const carrosselId = `carrossel-${globalIndex}`;
                         card.innerHTML = `
@@ -397,7 +402,7 @@
                 loadMoreButton.style.display = (page * productsPerPage) < totalProdutos ? "block" : "none";
             } catch (error) {
                 console.error("Erro ao carregar produtos:", error);
-                errorMessage.textContent = error.message || "Erro ao carregar os produtos. Tente novamente mais tarde.";
+                errorMessage.textContent = error.message || "Erro ao carregar os produtos. Verifique sua conexão e se a API está online.";
                 errorMessage.style.display = "block";
                 mensagemVazia.style.display = "none";
                 gridProdutos.style.display = "none";
@@ -615,20 +620,8 @@
                         const categoria = document.querySelector(".categoria-item.ativa")?.dataset.categoria || "todas";
                         const loja = document.querySelector(".loja.ativa, .loja-todas.ativa")?.dataset.loja || "todas";
                         carregarProdutos(categoria, loja, buscaInput.value, currentPage);
-                    }, 500);
+                    }, 300); // Debounce para não disparar muitas requisições
                 });
-            }
-
-            const imageModal = document.getElementById("imageModal");
-            if (imageModal) {
-                imageModal.addEventListener("click", (e) => {
-                    if (e.target === e.currentTarget) closeModal();
-                });
-            }
-
-            if (window.ethereum) {
-                console.log("MetaMask detectado, desativando temporariamente");
-                window.ethereum = null;
             }
         });
     </script>
