--- a/add-produto.html
+++ b/add-produto.html
@@ -202,7 +202,7 @@
     <script>
         const VERSION = "1.0.10"; // Mantenha a sua versão original, se quiser
         // *** IMPORTANTE: SUBSTITUA PELA URL DA SUA API NO RENDER! ***
-        const API_BASE_URL = 'https://SUA_API_RENDER_URL'; // Ex: 'https://minha-api-produtos.onrender.com'
+        const API_BASE_URL = 'https://minha-api-produtos.onrender.com'; // Ex: 'https://minha-api-produtos.onrender.com'
         
         let produtos = [];
         let paginaAtual = 1;
