--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
     <script>
         const VERSION = "1.0.8"; // Mantenha a sua versão original, se quiser
         // *** IMPORTANTE: SUBSTITUA PELA URL DA SUA API NO RENDER! ***
-        const API_BASE_URL = 'https://SUA_API_RENDER_URL'; // Ex: 'https://minha-api-produtos.onrender.com'
+        const API_BASE_URL = 'https://minha-api-produtos.onrender.com'; // Ex: 'https://minha-api-produtos.onrender.com'
         
         let currentImages = [];
         let currentImageIndex = 0;
